working on users collection, docs, route, and controller
